tests/error/type_not_template.gw
// [contains] is not template
<int>Object o;
